Add some handling for syncing song choices
